found and fixed some contrast ratio erros

--- a/finalproject/styles/finalbase.css
+++ b/finalproject/styles/finalbase.css
@@ -143,8 +143,8 @@ header img {
 .cta { 
     display: inline-block; 
     padding: .55rem 1.5rem; 
-    background: var(--primary-color); 
-    color: var(--text-color); 
+    background: var(--accent-color); 
+    color: var(--secondtext-color); 
     border-radius: 6px; 
     text-decoration: none; 
     font-weight: 600;
@@ -152,8 +152,8 @@ header img {
 }
 
 .cta:hover { 
-    color: var(--background-color);
-    background: var(--accent-color); 
+    color: var(--secondtext-color);
+    background: var(--secondary-color); 
     transform: scale(1.03);
 }
 
